<resources>
    <string name="app_name">Infgrphcs</string>
    <string name="nortemap">nortemap</string>
    <string name="pagudpud">pagudpud</string>
    <string name="sarrat">sarrat</string>
    <string name="sannicolas">sannicolas</string>
    <string name="piddig">piddig</string>
    <string name="carasi">carasi</string>
    <string name="bacarra">bacarra</string>
    <string name="vintar">vintar</string>
    <string name="pasuquin">pasuquin</string>
    <string name="adams">adams</string>
    <string name="burgos">burgos</string>
    <string name="bangui">bangui</string>
    <string name="dumalneg">dumalneg</string>
    <string name="dingras">dingras</string>
    <string name="marcos">marcos</string>
    <string name="nuevaera">nuevaera</string>
    <string name="banna">banna</string>
    <string name="batac">batac</string>
    <string name="paoay">paoay</string>
    <string name="currimao">currimao</string>
    <string name="pinili">pinili</string>
    <string name="badoc">badoc</string>
    <string name="rainlightning">rainlightning</string>
    <string name="laoag">laoag</string>
    <string name="solsona">solsona</string>
    <string name="sunrain">sunrain</string>
    <string name="cloudrain">cloudrain</string>
    <string name="cloudlightning">cloudlightning</string>
    <string name="advisory">advisory</string>
    <string name="suncloud">suncloud</string>
    <string name="cloud">cloud</string>
    <string name="abramap">abramap</string>
    <string name="abra">ABRA</string>
    <string name="norte">I. NORTE</string>
    <string name="tineg">tineg</string>
    <string name="lacub">lacub</string>
    <string name="malibcong">malibcong</string>
    <string name="lagayan">lagayan</string>
    <string name="danglas">danglas</string>
    <string name="sanjuan">sanjuan</string>
    <string name="sanisidro">sanisidro</string>
    <string name="villaviciosa">villaviciosa</string>
    <string name="manabo">manabo</string>
    <string name="luba">luba</string>
    <string name="tubo">tubo</string>
    <string name="besao">besao</string>
    <string name="tadian">tadian</string>
    <string name="mankayan">mankayan</string>
    <string name="quirino">quirino</string>
    <string name="sanemilio">sanemilio</string>
    <string name="cervantes">cervantes</string>
    <string name="bakun">bakun</string>
    <string name="caoayan">caoayan</string>
    <string name="licuanbaay">licuanbaay</string>
    <string name="daguioman">daguioman</string>
    <string name="bucloc">bucloc</string>
    <string name="boliney">boliney</string>
    <string name="lagangilang">lagangilang</string>
    <string name="dolores">dolores</string>
    <string name="lapaz">lapaz</string>
    <string name="tayum">tayum</string>
    <string name="sallapadan">sallapadan</string>
    <string name="bucay">bucay</string>
    <string name="pennarubia">pennarubia</string>
    <string name="bangued">bangued</string>
    <string name="langiden">langiden</string>
    <string name="pidigan">pidigan</string>
    <string name="sanquintin">sanquintin</string>
    <string name="santa">santa</string>
    <string name="bantay">bantay</string>
    <string name="vigan">vigan</string>
    <string name="send">Send</string>
    <string name="generate">generate</string>
    <string name="lightning">lightning</string>
    <string name="developers">developers</string>
    <string name="under_construction">UNDER CONSTRUCTION</string>
    <string name="developed_by">DEVELOPED BY:</string>
    <string name="kaizer_john_macni">KAIZER JOHN MACNI</string>
    <string name="philip_john_abad">PHILIP JOHN ABAD</string>
    <string name="christian_jay_baloaloa">CHRISTIAN JAY BALOALOA</string>
    <string name="background">background</string>
    <string name="title">title</string>
    <string name="time">time</string>
    <string name="distance">distance</string>
    <string name="datetime">datetime</string>
    <string name="ligthning_report">LIGTHNING REPORT</string>
    <string name="lightning_report">LIGHTNING REPORT</string>
    <string name="temp">temp</string>
    <string name="wave">wave</string>
    <string name="forecast">forecast</string>
    <string name="sunrise">sunrise</string>
    <string name="sunset">sunset</string>
    <string name="ti_baybay_agdalluyong_ti_apagapaman_agingga_kalalainganna">ti baybay agdalluyong ti nadawel agingga nakadawdawel.</string>
    <string name="agpannuray">agpannuray ti nakapoy agingga kalalainganna a pul-oy ti angin.</string>
    <string name="maadaan">maadaan ti naulep nga tangatang ken mapattu-pattuk a panagtudo, panagkimat ken panagurood.</string>
    <string name="_0_6m_2_1m">0.6m-2.1m</string>
    <string name="se_sw">SE-SW</string>
    <string name="min">MIN</string>
    <string name="max">MAX</string>
    <string name="hi">HI</string>
    <string name="advisories">ADVISORIES</string>
    <string name="active_weather_phenomenon">ACTIVE WEATHER PHENOMENA</string>
    <string name="weather">weather\n</string>
    <string name="header">header</string>
    <string name="lpa">AWAN AKTIBO NGA LPA.</string>
    <string name="tropical_cyclones">AWAN AKTIBO NGA BAGYO.</string>
    <string name="welcome">welcome</string>
    <string name="blue">blue</string>
    <string name="cloud_cloud">IN CLOUD</string>
    <string name="cloud_ground">CLOUD TO GROUND</string>
    <string name="lpa_tropical_cyclone">LPA/TC</string>
    <string name="tropical_cyclone_lpa">TC/LPA</string>
    <string name="enter_password">PASSWORD</string>
    <string name="tracking_the_sky_helping_the_country">\"tracking the sky helping the country\"</string>
    <string name="type">type</string>
    <string name="input">INPUT</string>
    <string name="green">green</string>
    <string name="dry_bulb">DRY BULB</string>
    <string name="wet_bulb">WET BULB</string>
    <string name="rh">RH</string>
    <string name="dp">DP</string>
    <string name="clear">clear</string>
    <string name="calc">calc</string>
    <string name="c1">c1</string>
    <string name="c2">c2</string>
    <string name="c3">c3</string>
    <string name="percent">percent</string>
    <string name="vapor_pressure">VAPOR PRESSURE</string>
    <string name="v_press">VP</string>
    <string name="x">X</string>
    <string name="pilar">pilar</string>
    <string name="luna">luna</string>
    <string name="santa_marcela">sta.marcela</string>
    <string name="pudtol">pudtol</string>
    <string name="flora">flora</string>
    <string name="calanasan">calanasan</string>
    <string name="kabugao">kabugao</string>
    <string name="conner">conner</string>
    <string name="apayao">APAYAO</string>
    <string name="saguday">saguday</string>
    <string name="aglipay">aglipay</string>
    <string name="diffun">diffun</string>
    <string name="cabarroguis">cabarroguis</string>
    <string name="nagtipunan">nagtipunan</string>
    <string name="quirino1">QUIRINO</string>
    <string name="maddela">maddela</string>
    <string name="solano">solano</string>
    <string name="diadi">diadi</string>
    <string name="bagabag">bagabag</string>
    <string name="quezon">quezon</string>
    <string name="villaverde">villaverde</string>
    <string name="ambaguio">ambaguio</string>
    <string name="bayombong">bayombong</string>
    <string name="bambang">bambang</string>
    <string name="kasibu">kasibu</string>
    <string name="kayapa">kayapa</string>
    <string name="santafe">sta.fe</string>
    <string name="aritao">aritao</string>
    <string name="dupaxdelnorte">dupaxdelnorte</string>
    <string name="dupaxdelsur">dupaxdelsur</string>
    <string name="alfonsocastenada">alfonsocastenada</string>
    <string name="nueva_vizcaya">N. VIZCAYA</string>
    <string name="alfonsocastaneda">alfonsocastaneda</string>
    <string name="buguias">buguias</string>
    <string name="kibungan">kibungan</string>
    <string name="kabayan">kabayan</string>
    <string name="atok">atok</string>
    <string name="kapangan">kapangan</string>
    <string name="tublay">tublay</string>
    <string name="bokod">bokod</string>
    <string name="sablan">sablan</string>
    <string name="latrinidad">latrinidad</string>
    <string name="baguio">baguio</string>
    <string name="itogon">itogon</string>
    <string name="tuba">tuba</string>
    <string name="benguet">BENGUET</string>
    <string name="bangar">bangar</string>
    <string name="sudipen">sudipen</string>
    <string name="balaoan">balaoan</string>
    <string name="santol">santol</string>
    <string name="bacnotan">bacnotan</string>
    <string name="sangabriel">sangabriel</string>
    <string name="sanfernando">sanfernando</string>
    <string name="bagulin">bagulin</string>
    <string name="naguilian">naguilian</string>
    <string name="bauang">bauang</string>
    <string name="caba">caba</string>
    <string name="aringay">aringay</string>
    <string name="tubao">tubao</string>
    <string name="agoo">agoo</string>
    <string name="santotomas">sto.tomas</string>
    <string name="pugo">pugo</string>
    <string name="rosario">rosario</string>
    <string name="la_union">LA UNION</string>
    <string name="sadanga">sadanga</string>
    <string name="sagada">sagada</string>
    <string name="bontoc">bontoc</string>
    <string name="sabangan">sabangan</string>
    <string name="bauko">bauko</string>
    <string name="barlig">barlig</string>
    <string name="natonin">natonin</string>
    <string name="paracelis">paracelis</string>
    <string name="mountain_province">M. PROVINCE</string>
    <string name="sanpablo">sanpablo</string>
    <string name="maconacon">maconacon</string>
    <string name="divilacan">divilacan</string>
    <string name="santamaria">sta.maria</string>
    <string name="cabagan">cabagan</string>
    <string name="tumauini">tumauini</string>
    <string name="ilagan">ilagan</string>
    <string name="palanan">palanan</string>
    <string name="sanmariano">sanmariano</string>
    <string name="dinapigue">dinapigue</string>
    <string name="sanguillermo">sanguillermo</string>
    <string name="echague">echague</string>
    <string name="jones">jones</string>
    <string name="sanagustin">sanagustin</string>
    <string name="delfinalbano">delfinalbano</string>
    <string name="mallig">mallig</string>
    <string name="gamu">gamu</string>
    <string name="roxas">roxas</string>
    <string name="angadanan">angadanan</string>
    <string name="benitosoliven">benitosoliven</string>
    <string name="cauayancity">cauayancity</string>
    <string name="cordon">cordon</string>
    <string name="santiagocity">santiagocity</string>
    <string name="ramon">ramon</string>
    <string name="alicia">alicia</string>
    <string name="sanmateo">sanmateo</string>
    <string name="cabatuan">cabatuan</string>
    <string name="aurora">aurora</string>
    <string name="sanmanuel">sanmanuel</string>
    <string name="isabela">ISABELA</string>
    <string name="sinait">sinait</string>
    <string name="cabugao">cabugao</string>
    <string name="magsingal">magsingal</string>
    <string name="santodomingo">sto.domingo</string>
    <string name="sanildefonso">sanildefonso</string>
    <string name="sanvicente">sanvicente</string>
    <string name="santacatalina">sta.catalina</string>
    <string name="vigancity">vigancity</string>
    <string name="narvacan">narvacan</string>
    <string name="nagbukel">nagbukel</string>
    <string name="sanesteban">sanesteban</string>
    <string name="lidlidda">lidlidda</string>
    <string name="santiago">santiago</string>
    <string name="banayoyo">banayoyo</string>
    <string name="candoncity">candoncity</string>
    <string name="galimuyod">galimuyod</string>
    <string name="ilocos_sur">I. SUR</string>
    <string name="aurora1">AURORA</string>
    <string name="kalinga">KALINGA</string>
    <string name="ifugao">IFUGAO</string>
    <string name="cagayan">CAGAYAN</string>
    <string name="pangasinan">PANGASINAN</string>
</resources>